--- a/java-concurrency/build.gradle
+++ b/java-concurrency/build.gradle
@@ -1,4 +1,15 @@
+group 'io.rdlab'
+version '1.0-SNAPSHOT'
+
 apply plugin: 'java'
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile group: 'com.typesafe.akka', name: 'akka-actor_2.10', version: '2.2.1'
+}
 
 jar {
     manifest {
