--- a/hn/pom.xml
+++ b/hn/pom.xml
@@ -34,6 +34,12 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>ru.yoomoney.tech</groupId>
+			<artifactId>db-queue</artifactId>
+			<version>15.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
