--- a/io-rdlab-scylladb-fun/src/main/resources/application-local.yaml
+++ b/io-rdlab-scylladb-fun/src/main/resources/application-local.yaml
@@ -8,10 +8,31 @@ spring:
     port: 9042
 
 server:
-  port: 8093
+  port: 8080
 
 management:
   endpoints:
     web:
       exposure:
         include: info,health,prometheus
+
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+
+  observations:
+    annotations:
+      enabled: true
+  tracing:
+    enabled: true
+    sampling:
+      probability: 1.0
+    propagation:
+      type: b3
+  otlp:
+    tracing:
+      endpoint: http://localhost:4318/v1/traces
+
+logging:
+  config: classpath:logback.xml
