--- a/io-rdlab-scylladb-fun/src/main/resources/local/docker-compose.yaml
+++ b/io-rdlab-scylladb-fun/src/main/resources/local/docker-compose.yaml
@@ -2,7 +2,33 @@ services:
   scylla:
     image: scylladb/scylla:5.1.4
     ports:
-      - "9042:9042"
+      - 9042:9042
     volumes:
       - "./scylla.yaml:/etc/scylla/scylla.yaml"
     command: "--listen-address 0.0.0.0 --smp 1 --broadcast-rpc-address 0.0.0.0"
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - 9090:9090
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - 3000:3000
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+      - ./grafana/data:/etc/grafana/provisioning/datasources
+
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    ports:
+      - 4318:4318
+      - 4317:4317
+      - 16686:16686
