--- a/io-rdlab-scylladb-fun/src/main/resources/local/docker-compose.yaml
+++ b/io-rdlab-scylladb-fun/src/main/resources/local/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   scylla:
-    image: scylladb/scylla:5.1.4
+    image: scylladb/scylla:6.1
     ports:
       - 9042:9042
     volumes:
@@ -8,7 +8,7 @@ services:
     command: "--listen-address 0.0.0.0 --smp 1 --broadcast-rpc-address 0.0.0.0"
 
   prometheus:
-    image: prom/prometheus:latest
+    image: prom/prometheus:v3.3.1
     container_name: prometheus
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
@@ -16,7 +16,7 @@ services:
       - 9090:9090
 
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana:12.0.0
     container_name: grafana
     ports:
       - 3000:3000
@@ -27,7 +27,7 @@ services:
       - ./grafana/data:/etc/grafana/provisioning/datasources
 
   jaeger:
-    image: jaegertracing/all-in-one:latest
+    image: jaegertracing/all-in-one:1.68.0
     ports:
       - 4318:4318
       - 4317:4317
