--- a/io-rdlab-pr-tl/com/pom.xml
+++ b/io-rdlab-pr-tl/com/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <hivemq-mqtt-client.version>1.3.7</hivemq-mqtt-client.version>
+        <awaitility.version>3.0.0</awaitility.version>
     </properties>
 
     <dependencies>
@@ -23,6 +24,12 @@
             <groupId>com.hivemq</groupId>
             <artifactId>hivemq-mqtt-client</artifactId>
             <version>${hivemq-mqtt-client.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${awaitility.version}</version>
         </dependency>
     </dependencies>
 
