--- a/io-rdlab-pr-tl/cl/pom.xml
+++ b/io-rdlab-pr-tl/cl/pom.xml
@@ -14,6 +14,7 @@
     <name>cl</name>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
