--- a/io-rdlab-pr-tl/com/pom.xml
+++ b/io-rdlab-pr-tl/com/pom.xml
@@ -14,8 +14,8 @@
     <name>com</name>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <hivemq-mqtt-client.version>1.3.7</hivemq-mqtt-client.version>
-        <awaitility.version>3.0.0</awaitility.version>
     </properties>
 
     <dependencies>
@@ -24,12 +24,6 @@
             <groupId>com.hivemq</groupId>
             <artifactId>hivemq-mqtt-client</artifactId>
             <version>${hivemq-mqtt-client.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.awaitility</groupId>
-            <artifactId>awaitility</artifactId>
-            <version>${awaitility.version}</version>
         </dependency>
     </dependencies>
 
